--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <meta name="google-site-verification" content="lh51nxQZIj5iJ0kXWKNTey9ehmBmQ3qjyoESJK3x04I" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Yeni Taraftarium24 - Canlı maç izleyin taraftarium 24 ile</title>
-<meta name="description" content="Taraftarium TV ve taraftarium24 online ve hd canlı maç izlemenin vazgeçilmez adresi. TRGoals ile taraftarium24 ve tüm süper lig maçlarını kesintisiz bir şekilde hd ve donmadan izleyebilirsiniz." />
+<title>Canlı maç izleme platformu Tarraftarium24 ile 24 saat kesintisiz ve kaliteli canlı maç keyfi!</title>
+<meta name="description" content="taraftarium24 canlı maç izle: Ücretsiz olarak en kaliteli ve güncel maçları kesintisiz olarak izleyebileceğiniz online platform." />
 <meta name="keywords" content="taraftarium, Taraftarium tv, canlı maç izle, taraftarium24, maç izle" />
-<meta name="yandex-verification" content="5dd4191b6a7530eb" />
+
 
         <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEggtXuvZHC9l7MCZRGltS4dZ9ECFj2537haLMf5jGoen9EAV7Nlw3A-Oq-t0ymFbVgSZkAqJGLAiz90xyKeYhd911LHnYemzx8Y9E9IHqHX5jaM6bY_2LGD2_zN6TdVRiwmyZbhSjm7f_s_433RIs2JLfFZGlS3HL-mzGPBvWYqDQLi77WpZ4A-bAvZhlEH/s1600/dortmund.png" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
