--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <title>Canlı maç izleme platformu Tarraftarium24 ile 24 saat kesintisiz ve kaliteli canlı maç keyfi!</title>
 <meta name="description" content="taraftarium24 canlı maç izle: Ücretsiz olarak en kaliteli ve güncel maçları kesintisiz olarak izleyebileceğiniz online platform." />
 <meta name="keywords" content="taraftarium, Taraftarium tv, canlı maç izle, taraftarium24, maç izle" />
+<meta name="yandex-verification" content="4101ec51c3bfea60" />
 
 
         <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEggtXuvZHC9l7MCZRGltS4dZ9ECFj2537haLMf5jGoen9EAV7Nlw3A-Oq-t0ymFbVgSZkAqJGLAiz90xyKeYhd911LHnYemzx8Y9E9IHqHX5jaM6bY_2LGD2_zN6TdVRiwmyZbhSjm7f_s_433RIs2JLfFZGlS3HL-mzGPBvWYqDQLi77WpZ4A-bAvZhlEH/s1600/dortmund.png" type="image/x-icon" />
