--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <meta name="google-site-verification" content="lh51nxQZIj5iJ0kXWKNTey9ehmBmQ3qjyoESJK3x04I" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Canlı maç izleme platformu Tarraftarium24 ile 24 saat kesintisiz ve kaliteli canlı maç keyfi!</title>
-<meta name="description" content="taraftarium24 canlı maç izle: Ücretsiz olarak en kaliteli ve güncel maçları kesintisiz olarak izleyebileceğiniz online platform." />
+<title>Taraftarium24 Canlı Maç İzle - Ücretsiz HD Canlı Maç Yayını İzleme Sitesi</title>
+<meta name="description" content="Taraftarium24 ile canlı maç izleme keyfini yaşayabileceğiniz en iyi adres! Ücretsiz olarak maçları canlı izleyin ve favori takımınıza destek verin." />
 <meta name="keywords" content="taraftarium, Taraftarium tv, canlı maç izle, taraftarium24, maç izle" />
-<meta name="yandex-verification" content="4101ec51c3bfea60" />
+
 
 
         <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEggtXuvZHC9l7MCZRGltS4dZ9ECFj2537haLMf5jGoen9EAV7Nlw3A-Oq-t0ymFbVgSZkAqJGLAiz90xyKeYhd911LHnYemzx8Y9E9IHqHX5jaM6bY_2LGD2_zN6TdVRiwmyZbhSjm7f_s_433RIs2JLfFZGlS3HL-mzGPBvWYqDQLi77WpZ4A-bAvZhlEH/s1600/dortmund.png" type="image/x-icon" />
@@ -1635,15 +1635,7 @@ Bizi takip edin:
 </div>
 </body>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W8H8QN3QWR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-W8H8QN3QWR');
-</script>
 
 <script data-cfasync="false" src="//asacdn.com/script/suv4.js" data-adel="lwsu" cdnd="asacdn.com" zid="7295018"></script>
 
